--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
     <app-tetris-navbar [links]="links"></app-tetris-navbar>
-
+    <app-jumbotron [game]="game" ></app-jumbotron>
     <br>
     <div class="container">
         <div class="row" *ngFor="let row of game.board.rows">
